--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -17,7 +17,6 @@
     width: 33.3%;
     background-color: #f5f5f5;
     border-radius: 10px;
-    color: #598cc0;
     overflow: hidden;
     padding: 77px 55px 33px 55px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
@@ -29,10 +28,12 @@
 
 .login-form-title {
     display: block;
-    font-size: 30px;
+    font-size: 32px;
+    font-weight: 800;
     line-height: 1.2;
     text-align: center;
     padding-bottom: 30px;
+    text-transform: uppercase;
 }
 
 .wrap-input {
@@ -44,6 +45,7 @@
 
 .input {
     font-size: 15px;
+    font-weight: 300;
     color: rgb(0, 19, 124);
     line-height: 1.2;
     border: none;
@@ -62,7 +64,6 @@
     top: 0;
     left: 0;
     pointer-events: none;
-    color: #adadad;
 }
 
 .focus-input::before {
@@ -82,8 +83,7 @@
 }
 
 .focus-input::after {
-    font-size: 15px;
-    color: #75A0CB;
+    font-size: 12px;
     line-height: 1.2;
     content: attr(data-placeholder);
     display: block;
@@ -104,7 +104,7 @@ input:focus {
 
 input:focus + .focus-input::after {
     top: -15px;
-    color: #E2A9BC;
+    color: #4379af;
 }
 
 input:focus + .focus-input::before {
@@ -127,7 +127,8 @@ input:focus + .focus-input::before {
 }
 
 .login-form-btn {
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: 800;
     border: none;
     border-radius: 10px;
     color: white;
@@ -138,12 +139,13 @@ input:focus + .focus-input::before {
     align-items: center;
     width: 100%;
     height: 50px;
-    background: linear-gradient(to left, #E2A9BC, #75A0CB 70%);
+    background: #7400B8;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.068);
     cursor: pointer;
     transition: .5s;
+    margin-top: 40px;
 }
 
 .login-form-btn:hover {
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.178);
+    box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.288);
 }
